--- a/src/app/components/product-edit/product-edit.component.html
+++ b/src/app/components/product-edit/product-edit.component.html
@@ -7,16 +7,9 @@
         </div>
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control" formControlName="name" 
-                                [ngClass]="{'is-invalid':submitted && productFormGroup.get('name')?.errors?.['required']} ">
-                                <!-- && productFormGroup.controls.name.errors}  && productFormGroup.-->
-            <div *ngIf="submitted && productFormGroup.get('name')?.errors?.['required']" 
-                        class="invalid-feedback"  >
-                <!-- <div *ngIf="productFormGroup.get('name')?.invalid">Name is required</div> -->
-                <div *ngIf="productFormGroup.get('name')?.errors?.['required']">
-                    Name is required.
-                  </div>
-            </div>
+            <input type="text" class="form-control" formControlName="name">
+                                
+           
         </div>
         <div class="form-group">
             <label>Price</label>
