--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -24,6 +24,11 @@
             </ul>
           </li>
         </ul>
+        <ul class="navbar-nav m-auto">
+          <li>
+            <app-stats></app-stats>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
