--- a/src/app/components/products/products-list/products-list.component.html
+++ b/src/app/components/products/products-list/products-list.component.html
@@ -22,11 +22,11 @@
 
                 <app-product-item 
                 [product]="p" 
-                (eventEmitter)="onActionEvent($event)" 
+                
                 *ngFor="let p of result.data"
                 style="display: contents;">
                 </app-product-item>
-               
+                <!-- (eventEmitter)="onActionEvent($event)"  -->
         
             </table>
         </ng-container>
