--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,3 +1,5 @@
-<app-products-nav-bar (productEventEmitter)="onActionEvent($event)"></app-products-nav-bar>
-<app-products-list [productsInput$]="products$" (productEventEmitter)="onActionEvent($event)"  ></app-products-list>
+<app-products-nav-bar ></app-products-nav-bar>
+<app-products-list [productsInput$]="products$"  ></app-products-list>
+
+<!-- (productEventEmitter)="onActionEvent($event)"  -->
 
